# C_Excercisses

./: .gitignore  CMakeLists.txt  README.md  Zad1.c  Zad2.c  Zad3.c  Zad4.c  Zad5.c  Zad6.c  compile.sh  rename.sh
C++/: Data_1_test.txt  Data_2_test.txt  Zad_7_1_2.cpp  Zad_7_2.cpp  Zad_7_2_2.cpp
Zadania_1/: Zad_1.c  Zad_2.c  Zad_3.c  Zad_4.c  Zad_5.c
Zadania_2/: Zad_1.c  Zad_2.c  Zad_3.c  Zad_4.c  Zad_5.c
Zadania_3/: Zad_1.c  Zad_2.c
Zadania_4/: Zad_1.c  Zad_2.c  Zad_3.c
Zadania_5/: Zad_1.c  Zad_2.c  Zad_3.c  Zad_4.c  Zad_5.c  Zad_6.c
Zadania_6/: Zad_1.c  Zad_2.c  Zad_3.c
Zadania_7/: Zad_1.c  Zad_1_2.c  Zad_2.c  Zad_2_2.c
