cmake_minimum_required(VERSION 3.27)
project(../C_Excercisses C)

set(CMAKE_C_STANDARD 11)

add_executable(Zad_1_2 ../C_Excercisses/Zadania_1/Zad_2.c)
add_executable(Zad_1_3 ../C_Excercisses/Zadania_1/Zad_3.c)
add_executable(Zad_1_4 ../C_Excercisses/Zadania_1/Zad_4.c)
add_executable(Zad_1_5 ../C_Excercisses/Zadania_1/Zad_5.c)
add_executable(Zad_1_6 ../C_Excercisses/Zadania_1/Zad_6.c)
add_executable(Zad_2_1 ../C_Excercisses/Zadania_2/Zad_1.c)
add_executable(Zad_2_2 ../C_Excercisses/Zadania_2/Zad_2.c)
add_executable(Zad_2_3 ../C_Excercisses/Zadania_2/Zad_3.c)
add_executable(Zad_2_4 ../C_Excercisses/Zadania_2/Zad_4.c)
add_executable(Zad_2_5 ../C_Excercisses/Zadania_2/Zad_5.c)
add_executable(Zad_3_1 ../C_Excercisses/Zadania_3/Zad_1.c)
add_executable(Zad_3_2 ../C_Excercisses/Zadania_3/Zad_2.c)
